[#1] Create starter kit [naming fix]

--- a/{{cookiecutter.project_slug}}/server/apps/users/templates/users/widgets/permissions.html
+++ b/{{cookiecutter.project_slug}}/server/apps/users/templates/users/widgets/permissions.html
@@ -1,4 +1,4 @@
-{% load permissions_widget_tags i18n %}
+{%raw %}{% load permissions_widget_tags i18n %}
 
 <table class="table permissions-widget">
     <thead>
@@ -56,4 +56,4 @@
             {% endifchanged %}
         {% endfor %}
     </tbody>
-</table>
+</table>{%endraw %}
